Fixed hamburger menu alignment

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@
     position: absolute;
     flex-direction: column;
     gap: 0;
-    top: 65px;
+    top: 70px;
     left: -100%;
     text-align: start;
     width: 100%;
